<resources>
    <string name="app_name">DomestiGoV1</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign up.</string>
    <string name="change_language">Change Language</string>
    <string name="maid_login">Maid Login</string>
    <string name="one_stop_solution_for_all_your_household_requirements">One stop solution for all your household requirements</string>
    <string name="maids">Maids</string>
    <string name="about_us">About Us</string>
    <string name="assessment">Assessment</string>
    <string name="profile">Profile</string>
    <string name="domestigo_is_an_app_that_helps_users_find_maids_nearby_book_them_on_a_daily_weekly_or_monthly_basis_it_also_has_location_based_services_to_find_the_maids_a_feature_for_users_to_review_their_hired_maids_and_so_on_we_aim_to_make_it_a_norm_for_hiring_domestic_help_in_urban_neighborhoods_we_are_college_students_trying_to_make_this_app_accessible_to_everyone_and_make_everyone_s_lives_easier">DomestiGo is an app that helps users find maids nearby, book them on a daily, weekly or monthly basis. It also has location-based services to find the maids, a feature for users to review their hired maids, and so on. We aim to make it a norm for hiring domestic help in urban neighborhoods. We are college students trying to make this app accessible to everyone and make everyone\'s lives easier.</string>
    <string name="our_team">Our Team</string>
    <string name="kushal">Kushal</string>
    <string name="riddhi">Riddhi</string>
    <string name="anoushka">Anoushka</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="maid_sign_up">Maid Sign Up</string>
    <string name="location">Location</string>
    <string name="appointments">Appointments</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="ghapshap">GhapShap</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="location1">Location:</string>
    <string name="name1">Name:</string>
    <string name="email1">Email:</string>
    <string name="your_maids">Your Maids</string>
    <string name="find_maids_nearby">Find Maids Nearby</string>
    <string name="experience">Experience:</string>
    <string name="rating1">Rating:</string>
    <string name="services">Services:</string>
    <string name="hire">Hire</string>
    <string name="maid_profiles">Maid Profiles</string>
</resources>