<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutus"
    android:orientation="vertical"
    android:background="@color/domesticgored">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/aboutusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/about_us"
            android:textColor="@color/projectwhite"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/aboutus_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutusText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/domestigo_is_an_app_that_helps_users_find_maids_nearby_book_them_on_a_daily_weekly_or_monthly_basis_it_also_has_location_based_services_to_find_the_maids_a_feature_for_users_to_review_their_hired_maids_and_so_on_we_aim_to_make_it_a_norm_for_hiring_domestic_help_in_urban_neighborhoods_we_are_college_students_trying_to_make_this_app_accessible_to_everyone_and_make_everyone_s_lives_easier"
            android:textColor="@color/projectwhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/team_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutus_info"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:text="@string/our_team"
            android:textColor="@color/projectwhite"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_label"
            android:id="@+id/kushal_layout"
            >

            <ImageView
                android:id="@+id/kushal"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/team1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/kushal"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/kushal"
                android:textColor="@color/projectwhite"
                android:textSize="20dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/riddhi_layout"
            android:layout_below="@id/team_label"
            android:layout_toRightOf="@id/kushal_layout">

            <ImageView
                android:id="@+id/riddhi1"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/team3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/riddhi1"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/riddhi"
                android:textColor="@color/projectwhite"
                android:textSize="20dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anoushka_layout"
            android:layout_below="@id/team_label"
            android:layout_toRightOf="@id/riddhi_layout">
            <ImageView
                android:id="@+id/anoushka"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/team2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/anoushka"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/anoushka"
                android:textColor="@color/projectwhite"
                android:textSize="20dp" />

        </RelativeLayout>

    </RelativeLayout>





</ScrollView>