<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appointments"
    android:background="@color/domesticgored">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/appointmentsicon"
        android:src="@drawable/appointments"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        ></ImageView>
    <TextView
        android:id="@+id/appointments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/appointmentsicon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/appointments"
        android:textColor="@color/projectwhite"
        android:textSize="40sp" />
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:id="@+id/card1"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appointments"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/projectwhite">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Date"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/calendar"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/domesticgored"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Time"
                android:layout_below="@+id/Date"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/clock"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/time"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    android:id="@+id/time1"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/Time"
                android:id="@+id/Location">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/location"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/location1"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    android:id="@+id/location1"
                    />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card1"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/projectwhite">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Date2"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/calendar"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    android:layout_marginTop="10dp"
                    android:id="@+id/date2"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Time2"
                android:layout_below="@+id/Date2"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/clock"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/time"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    android:id="@+id/time2"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/Time2"
                android:id="@+id/Location2">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/location"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/location1"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/domesticgored"
                    android:fontFamily="@font/poppins"
                    android:id="@+id/location2"
                    />
            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
